--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.8.0",
     "@eslint/js": "^9.39.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
