タイポ修正悲しいね

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ applications:
         build:
           commands:
             - npm install
-            - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-ip $AWS_APP_ID
+            - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 
     frontend:
       phases:
